--- a/index.html
+++ b/index.html
@@ -16,41 +16,28 @@
   <body>
     <div class="main-wrapper">
       <!-- ============== Navbaaaar ============= -->
-      <nav class="navbar"></nav>
+      <!-- <nav class="navbar"></nav> -->
       <!-- ============== section 1 ============= -->
       <section class="section">
-        <div class="section-1-content">
-          <!-- video -->
-          <video autoplay muted loop id="myVideo">
-            <source src="./assets/Mountain.mp4" type="video/mp4" />
-          </video>
+       <!-- img -->
+       <div class="section-one-image">
+        <nav class="navbar">
+          <ul>
+            <li>nav_item</li>
+            <li>nav_item</li>
+            <li>nav_item</li>
+            <li>nav_item</li>
+            <li>nav_item</li>
+          </ul>
+        </nav>
+        <!-- <img src="./assets/images/aqualization-main.jpeg" alt=""> -->
+       </div>
 
-          <div class="section-1-info">
-            <div>
-              <img
-                class="section-1-logo"
-                src="./assets/logos/aqualization-main-removebg-preview.png"
-                alt=""
-              />
-            </div>
-            <div>
-              <p>
-                Apex Legends: Eclipse introduces the brand new map Broken Moon,
-                the new defensive Legend Catalyst, a new Battle Pass and more!
-              </p>
-            </div>
-
-            <!-- buttons -->
-            <div class="section-1-buttons">
-              <a href="#">Play Free Now*</a>
-              <a href="#">Watch Gameplay Trailer</a>
-            </div>
+       <!-- info - sub-heading -->
+          <div class="section__one__info">
+            <p>Lorem ipsum dolor sit amet,quam!</p>
           </div>
-        </div>
-      </section>
-    </div>
-
-    <br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+       <!-- buttons -->
 
     <script src="./JS/script.js"></script>
   </body>
