--- a/index.html
+++ b/index.html
@@ -36,8 +36,14 @@
        <!-- info - sub-heading -->
           <div class="section__one__info">
             <p>Lorem ipsum dolor sit amet,quam!</p>
+             <!-- buttons -->
+       <div class="buttons">
+        <button class="glow-on-hover" type="button">Button 1</button>
+       <button class="glow-on-hover" type="button">Button 2</button>
+      </div>
           </div>
-       <!-- buttons -->
+      
+       
 
     <script src="./JS/script.js"></script>
   </body>
