Added hign quality videos...

--- a/index.html
+++ b/index.html
@@ -4,47 +4,35 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Aqualization || Metaverse</title>
-    <link rel="stylesheet" href="./CSS/style.css" />
-
-    <!-- title tag image -->
+    <title>Document</title>
+    <!-- unicons -->
     <link
-      rel="shortcut icon"
-      href="./assets/logos/aqualization-main-removebg-preview.png"
+      rel="stylesheet"
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
+    <link rel="stylesheet" href="./CSS/Style.css" />
   </head>
   <body>
     <div class="main-wrapper">
-      <!-- ============== Navbaaaar ============= -->
-      <!-- <nav class="navbar"></nav> -->
-      <!-- ============== section 1 ============= -->
-      <section class="section">
-       <!-- img -->
-       <div class="section-one-image">
-        <nav class="navbar">
-          <ul>
-            <li>nav_item</li>
-            <li>nav_item</li>
-            <li>nav_item</li>
-            <li>nav_item</li>
-            <li>nav_item</li>
-          </ul>
-        </nav>
-        <!-- <img src="./assets/images/aqualization-main.jpeg" alt=""> -->
-       </div>
-
-       <!-- info - sub-heading -->
-          <div class="section__one__info">
-            <p>Lorem ipsum dolor sit amet,quam!</p>
-             <!-- buttons -->
-       <div class="buttons">
-        <button class="glow-on-hover" type="button">Button 1</button>
-       <button class="glow-on-hover" type="button">Button 2</button>
-      </div>
+      <nav class="navbar">
+        <div class="nav_menu_logo">
+          <div class="hamburger-menu">
+            <img src="./assets/icons/icons8-menu-rounded-50.png" alt="" />
           </div>
-      
-       
 
-    <script src="./JS/script.js"></script>
+          <div class="nav-logo"><span>Aqualization</span></div>
+        </div>
+
+        <div>
+          <div class="nav-btn">
+            <a href="#"
+              >Download For Free
+
+              <i class="uil uil-step-forward"></i>
+            </a>
+          </div>
+        </div>
+      </nav>
+    </div>
   </body>
 </html>
