--- a/index.html
+++ b/index.html
@@ -10,29 +10,152 @@
       rel="stylesheet"
       href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
     />
-    <link rel="stylesheet" href="./CSS/Style.css" />
+    <link rel="stylesheet" href="./assets/CSS/Style.css" />
   </head>
   <body>
     <div class="main-wrapper">
-      <nav class="navbar">
-        <div class="nav_menu_logo">
-          <div class="hamburger-menu">
-            <img src="./assets/icons/icons8-menu-rounded-50.png" alt="" />
-          </div>
+      <!-- ======================== top container ======================== -->
+      <div class="top-nav-menu">
+        <ul>
+          <li>
+            <a href="#">Profile</a>
+            <a href="#">Help</a>
+            <a href="#">Logo</a>
+          </li>
+        </ul>
+      </div>
+      <!-- ======================== Navigation menu ======================== -->
 
-          <div class="nav-logo"><span>Aqualization</span></div>
+      <menu class="menu">
+        <div class="menu-logo">
+          <a href="#">Aqualization</a>
+          <!-- <img
+            src="./assets/logo/aqualization_three-removebg.png"
+            alt="nav-logo aqualization"
+          /> -->
         </div>
 
+        <nav class="navbar">
+          <ul class="nav-list">
+            <li>
+              <a href="#">About</a>
+              <!-- <ul class="dropdown">
+                <li><a href="#">About Apex Aqualization</a></li>
+                <li><a href="#">FAQ</a></li>
+                <li><a href="#">PC Requirements</a></li>
+                <li><a href="#">Credits</a></li>
+                <li><a href="#">Accessibility</a></li>
+              </ul> -->
+            </li>
+            <li>
+              <a href="#">Modes</a>
+            </li>
+            <li>
+              <a href="#">Season</a>
+            </li>
+            <li>
+              <a href="#">Battlepass</a>
+            </li>
+            <li>
+              <a href="#">News&Media</a>
+            </li>
+            <li>
+              <a href="#">Community</a>
+            </li>
+            <li>
+              <a href="#">Compete</a>
+            </li>
+          </ul>
+        </nav>
+
+        <a href="#" class="menu-btn"
+          >Coming Soon
+          <i class="uil uil-arrow-to-bottom"></i>
+        </a>
+      </menu>
+
+      <!-- ======================== Section one ======================== -->
+
+      <section class="section-one">
+        <div class="section-one-overlay">
+          <div class="section-one-banner">
+            <h1 class="section-header">Aqualization</h1>
+            <h3 class="section-sub-header">
+              Scavenge for resources and fight to survive in Aqualization!
+            </h3>
+          </div>
+        </div>
+      </section>
+
+      <section class="section-two">
+        <div class="section-two-banner">
+          <h1 class="section-header">Aqualization : ECLIPSE</h1>
+          <h3 class="section-sub-header">
+            Explore the remnants of the new map Broken Moon by new Zip Rails, a
+            <!-- fast new way to travel through the brutal beauty of the lunar
+            landscape. Conjure your inner strength as Catalyst, a new defensive
+            Legend. And bewitch your enemies with the Eclipse Battle Pass, with
+            Legendary new skins for Ash, Revenant, and the HAVOC assault rifle! -->
+          </h3>
+        </div>
+      </section>
+
+      <div class="section-three">
+        <div class="section-three-banner">
+          <h1 class="section-header">Latest Features</h1>
+          <!--  -->
+          <div class="card-wrapper">
+            <div class="card">
+              <div>
+                <img src="" />
+              </div>
+              <div>
+                <h5>Aqualization</h5>
+                <h5>22-01-2023</h5>
+              </div>
+              <div>
+                <h2>Enchant opponents in the Spellbound Collection Event</h2>
+              </div>
+            </div>
+            <div class="card">
+              <div>
+                <img src="" />
+              </div>
+              <div>
+                <h5>Aqualization</h5>
+                <h5>22-01-2023</h5>
+              </div>
+              <div>
+                <h2>Enchant opponents in the Spellbound Collection Event</h2>
+              </div>
+            </div>
+            <div class="card">
+              <div>
+                <img src="" />
+              </div>
+              <div>
+                <h5>Aqualization</h5>
+                <h5>22-01-2023</h5>
+              </div>
+              <div>
+                <h2>Enchant opponents in the Spellbound Collection Event</h2>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <!-- ========= section four  ========= -->
+      <footer class="footer">
         <div>
-          <div class="nav-btn">
-            <a href="#"
-              >Download For Free
-
-              <i class="uil uil-step-forward"></i>
-            </a>
-          </div>
+          <i class="uil uil-instagram"></i>
+          <i class="uil uil-twitter-alt"></i>
+          <i class="uil uil-facebook-f"></i>
+          <i class="uil uil-linkedin-alt"></i>
         </div>
-      </nav>
+      </footer>
     </div>
+
+    <script src="./assets/Js/script.js"></script>
   </body>
 </html>
