--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
     </style>
   </head>
   <body>
+    <!-- cursor -->
+    
+    <div class="cursor"></div>
+
     <div class="main-wrapper">
       <!-- ======================== top container ======================== -->
       <div class="top-nav-menu">
@@ -251,6 +255,25 @@
         </div>
       </footer>
     </div>
+
+    <script>
+      const cursor = document.querySelector(".cursor");
+
+      document.addEventListener("mousemove", (e) => {
+        cursor.setAttribute(
+          "style",
+          "top: " + (e.pageY - 10) + "px; left: " + (e.pageX - 10) + "px;"
+        );
+      });
+
+      document.addEventListener("click", () => {
+        cursor.classList.add("expand");
+
+        setTimeout(() => {
+          cursor.classList.remove("expand");
+        }, 500);
+      });
+    </script>
 
     <script src="./assets/Js/script.js"></script>
   </body>
