--- a/index.html
+++ b/index.html
@@ -140,9 +140,9 @@
               <a href="#">Battlepass</a>
             </li>
             <li>
-              <a href="#">News&Media</a>
+              <a href="#">Blog's</a>
               <ul class="dropdown">
-                <li><a href="#">Latest News</a></li>
+                <li><a href="./assets/HTML/blog.html">Latest News</a></li>
                 <li><a href="#">Game Updates</a></li>
                 <li><a href="#">Latest News</a></li>
               </ul>
