Working on custom blogging template

--- a/assets/HTML/latest-news.html
+++ b/assets/HTML/latest-news.html
@@ -7,9 +7,12 @@
     <title>Document</title>
 
     <!-- <link rel="stylesheet" href="/assets/CSS/Style.css" /> -->
-
+  
     </style>
   </head>
   <body>
+    <div class="container">
+      <h1>Aqualization Updates</h1>
+    </div>
   </body>
 </html>
