--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             <li>
               <a href="#">Blog's</a>
               <ul class="dropdown">
-                <li><a href="./assets/HTML/blog.html">Latest News</a></li>
+                <li><a href="./assets/HTML/latest-news.html">Latest News</a></li>
                 <li><a href="#">Game Updates</a></li>
                 <li><a href="#">Latest News</a></li>
               </ul>
