--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
     <div class="main-wrapper">
       <!-- ======================== top container ======================== -->
-      <div class="top-nav-menu">
+      <!-- <div class="top-nav-menu">
         <ul>
           <li>
             <a href="#">Profile</a>
@@ -106,7 +106,7 @@
             <a href="#">Logo</a>
           </li>
         </ul>
-      </div>
+      </div> -->
       <!-- ======================== Navigation menu ======================== -->
 
       <menu class="menu">
